[tool.poetry]
name = "index1"
version = "0.1.0"
description = ""
authors = ["Julien Bouquillon <julien.bouquillon@sg.social.gouv.fr>"]

[tool.poetry.dependencies]
python =  ">=3.12,<3.13"
llama-index = "^0.10.0"
python-frontmatter = "^1.0.0"
llama-cpp-python = "^0.2.11"
chromadb = "^0.4.13"
transformers = "^4.34.0"
torch = "^2.1.0"
accelerate = "^0.28.0"
safetensors = "^0.4.0"
mypy = "^1.5.1"
streamlit = "^1.28.1"
openai = "^0.28.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
